# RoboTrader

./: .dockerignore  .env.example  .gitignore  API_REAL_SETUP.md  ATUALIZACAO.md  CHANGELOG.md  COMO_USAR.md  CONFIGURACAO_CREDENCIAIS.md  CRIAR_EXE.md  DEPLOY.md  Dockerfile  GITHUB_SETUP.md  GIT_STATUS.md  GUIA_QUOTEX.md  IMPLEMENTACAO_COMPLETA.txt  INICIAR.txt  INICIO_RAPIDO.md  LOGIN_SETUP.md  MULTIPLAS_CONTAS.md  PASSO_A_PASSO.md  PRODUCTION_CONFIG.md  Procfile  QUICK_START.md  QUOTEX_DEMO_VS_REAL.md  QUOTEX_INTEGRATION.md  QUOTEX_SETUP.md  RAILWAY_DEPLOY.md  README.md  RESUMO_IMPLEMENTACAO.md  ROBO_TRADE.bat  SELETOR_DEMO_REAL.md  SETUP_GITHUB.txt  STATUS_FINAL.md  criar_atalho.bat  deploy_github.bat  discover_api.py  launcher.py  pyproject.toml  quick_test.py  railway.toml  (+10 more)
.github/: copilot-instructions.md
robo_trade/: avalon.py  backtest.py  broker.py  config.py  dashboard.py  db.py  exchange.py  homebroker.py  logger.py  martingale.py  quotex.py  trader.py
robo_trade/static/: style.css
scripts/: run_all.cmd  run_all_with_dashboard.cmd  run_backtest.cmd  run_dashboard.cmd  run_live.cmd  run_martingale_backtest.cmd
strategies/: base.py  ema_cross.py
